backend/demo/src/main/java/com/example/demo/error/IdNotFoundDatabase.java
package com.example.demo.error;

public class IdNotFoundDatabase extends Exception{
    
    public IdNotFoundDatabase(String message) {
        super(message);
    }
}
